@@ -15,6 +15,8 @@ BUGFIXES
     o Fixed wrong check for outdir write permissions in Coverage.R and
       NormalDB.R (#258) 
     o Fixed inverted return codes in couple of scripts (#284)  
+    o Fixed an issue in callAlterations where the id argument was largely
+      ignored (#292)
 
     
 Changes in version 2.2.0
